--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,3 +35,27 @@ body {
   background-color: black;
   opacity; 0.9;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.image-content {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
+}
+
+/* our mission section */
+.mission-statement {
+  display: flex;
+  height: 700px;
+  width: 1200px;
+  align-items: center;
+}
+
+.title {
+  background-color: black;
+
+}
