sizes for address boxes

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,13 @@ header nav {
   padding-right: 40px;
 }
 
+a {
+  color: seashell;
+}
+
+nav span {
+  padding: 20px 10px;
+}
 /* universal styles */
 body {
   margin: 0;
@@ -39,12 +46,8 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-}
-
-.image-content {
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
 /* our mission section */
@@ -52,15 +55,30 @@ body {
   display: flex;
   align-items: center;
 }
+
 .mission-statement.image-content {
   height: 700px;
   width: 1200px;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
+
 .title {
   background-color: black;
 }
 
 /*tea of the month */
+.teaofthemonth {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 1000px;
+}
+
+.row2, .row3, .row4, .row5 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .images {
   height: 200px;
@@ -69,4 +87,26 @@ body {
 .title {
   margin-top: 0;
   padding-top: 10px;
+}
+/* adresses */
+.locations {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.locations.image-content {
+  height: 500px;
+  width: 1200px;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+}
+
+.addresses {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-right: 40px;
+  padding-top: 15px;
+  width: 300px;
+  height: 300px;
 }
