--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,6 @@ body {
 .mission {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .mission{
@@ -67,36 +66,35 @@ body {
 .mission .title {
   background-color: black;
   width: 100%;
+  align-items: center;
 }
 
 /*tea of the month */
 .teaofthemonth {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   width: 1000px;
+  flex-wrap: wrap;
 }
 
 .tealist {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .tea img {
   height: 200px;
   width: 300px;
 }
-.title {
-  margin-top: 0;
-  padding-top: 10px;
-}
+
 /* adresses */
 .locations {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-content: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+
 .locations{
   height: 500px;
   width: 1200px;
@@ -112,4 +110,11 @@ body {
   padding-top: 15px;
   width: 300px;
   height: 300px;
+}
+.contact-info {
+  display: flex;
+  align-content: center;
+}
+.contact-info.copyright {
+  align-self: flex-start;
 }
