--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,6 +57,7 @@ body {
   height: 700px;
   width: 1200px;
   align-items: center;
+  justify-content: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
@@ -72,6 +73,7 @@ body {
   padding-top: 60px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .tealist {
@@ -100,10 +102,6 @@ body {
 
 .locations {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
   height: 500px;
   width: 1200px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
@@ -118,13 +116,16 @@ body {
   padding-top: 15px;
   width: 300px;
   height: 300px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+
+
+/* footer */
 
 .contact-info {
   display: flex;
   align-items: center;
-}
-
-.contact-info .copyright {
-  align-self: flex-start;
 }
