--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,8 +56,8 @@ body {
   padding-top: 70px;
   height: 700px;
   width: 1200px;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
@@ -71,9 +71,6 @@ body {
   height: 700px;
   width: 1000px;
   padding-top: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .tealist {
@@ -89,6 +86,8 @@ body {
 .tea img {
   height: 200px;
   width: 300px;
+  display: block;
+  margin: 10px;
 }
 
 .tea span {
@@ -101,31 +100,35 @@ body {
 /* adresses */
 
 .locations {
-  display: flex;
   height: 500px;
-  width: 1200px;
+  width: 1100px;
+  padding-top: 60px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
 }
 
-.info {
-  background-color: black;
+.locations .info {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  padding-right: 40px;
-  padding-top: 15px;
-  width: 300px;
-  height: 300px;
-  justify-content: center;
+  padding-top: 5px;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
+}
+.addresses {
+  background-color: black;
+  opacity: 1.0;
+  padding: 10px;
+  margin 5px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
+.contact-info {
+  height: 200px;
+}
 
 /* footer */
 
-.contact-info {
-  display: flex;
-  align-items: center;
+footer {
+  text-align: left;
+  padding-left: 20px;
 }
