--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,9 +44,12 @@ body {
 }
 
 .main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+padding-top: 70px;
+opacity: 0.9;
+width: 1200px;
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 /* our mission section */
@@ -57,7 +60,7 @@ body {
   height: 700px;
   width: 1200px;
   justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
@@ -70,7 +73,7 @@ body {
 .teaofthemonth {
   height: 700px;
   width: 1000px;
-  padding-top: 60px;
+  padding-top: 70px;
 }
 
 .tealist {
@@ -110,7 +113,7 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 5px;
-  align-items: center;
+  flex-wrap: wrap;
 }
 .addresses {
   background-color: black;
