--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .main-container {
-padding-top: 70px;
+padding-top: 100px;
 opacity: 0.9;
 width: 1200px;
 display: flex;
@@ -56,23 +56,23 @@ align-items: center;
 
 .mission {
   display: flex;
-  padding-top: 70px;
   height: 700px;
   width: 1200px;
-  justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
-.mission .title {
+.mission .statement {
   background-color: black;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 /*tea of the month */
 .teaofthemonth {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
   height: 700px;
   width: 1000px;
   padding-top: 70px;
@@ -106,7 +106,7 @@ align-items: center;
 
 .locations {
   display: flex;
-  justify-content: center;
+  align-items: center;
   height: 500px;
   width: 1100px;
   padding-top: 60px;
@@ -123,7 +123,7 @@ align-items: center;
   background-color: black;
   opacity: 1.0;
   padding: 10px;
-  margin 5px 20px;
+  margin: 5px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -133,6 +133,8 @@ align-items: center;
   height: 200px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+
 
 }
 
