--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,6 +48,9 @@ padding-top: 100px;
 opacity: 0.9;
 width: 1200px;
 margin: auto;
+display: flex;
+flex-direction: column;
+justify-content: center;
 }
 
 h2, h3, h4 {
@@ -73,6 +76,8 @@ h2, h3, h4 {
 
 /*tea of the month */
 #teaofthemonth {
+  display: flex;
+  justify-content: center;
   margin: auto;
   height: 700px;
   width: 1000px;
@@ -105,6 +110,8 @@ h2, h3, h4 {
 /* adresses */
 
 #locations {
+  display: flex;
+  justify-content: center;
   height: 500px;
   padding-top: 70px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
@@ -137,6 +144,8 @@ h2, h3, h4 {
 
 #contact-info {
   height: 200px;
+  display: flex;
+  justify-content: center;
 }
 
 /* footer */
