--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,7 +67,7 @@ h2, h3, h4 {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
-.mission .statement {
+#mission .statement {
   background-color: black;
   width: 100%;
   text-align: center;
@@ -111,7 +111,9 @@ h2, h3, h4 {
 
 #locations {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  text-align: center;
   height: 500px;
   padding-top: 70px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
@@ -146,6 +148,7 @@ h2, h3, h4 {
   height: 200px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 /* footer */
